Use web font loader for async web font delivery

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,13 @@
 * {
   box-sizing: border-box;
+}
+
+.wf-loading body,
+.wf-inactive body {
+  font-family: sans-serif;
+}
+
+.wf-active body {
   font-family: "Oxygen", sans-serif;
 }
 
