--- a/src/style/main.css
+++ b/src/style/main.css
@@ -11,6 +11,12 @@ body {
   padding: 0;
 }
 
+a:link,
+a:visited,
+a:hover {
+  text-decoration: none;
+}
+
 .infinitive-select div[class*="multiValue"] div:nth-child(2) {
   color: #68a27d;
 }
